# ChatGPT-in-Slack

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  main_prod.py  pyproject.toml
.github/workflows/: docker.yaml  lint.yaml  publish.yaml  tests.yaml
app/: __about__.py  app.py  bolt_listeners.py  i18n.py  markdown.py  openai_ops.py  slack_ops.py
